8203329: JDWP/JDI VM information string is incorrect

Make sure the native java.vm.info property also gets updated when the java version is.

Reviewed-by: sspitsyn, dholmes